# testing-mcp

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml
app/: auth.py  jobs.py  main.py
fastmcp_app/: auth.py  main.py
keycloak/: realm-mcp.json
