[project]
name = "testing-mcp"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.43.27",
    "boto3-stubs~=1.43.27",
    "fastapi>=0.136.3",
    "fastapi-mcp>=0.4.0",
    "mcp>=1.27.2",
    "pyjwt[crypto]>=2.10",
    "uvicorn[standard]>=0.49.0",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true
